--- a/email5/mail.html
+++ b/email5/mail.html
@@ -360,11 +360,6 @@
             </tr>
             <!-- // MODULE ROW -->
             <!-- MODULE ROW // -->
-            <tr>
-              <td id="header-top" class="banner" height="400" align="center" valign="top" >
-                <img src="img\banner.jpg" width="100%" class="flexibleImage" >
-              </td>
-            </tr>
             <!--ONE SECTION -->
             <tr>
               <td align="center" valign="top">
@@ -382,7 +377,7 @@
                                   <tbody>
                                     <tr>
                                       <td align="center" valign="top" class="imageContent">
-                                        <img src="img/icon1.jpg" width="70px" class="flexibleImage" style="max-width:70px;">
+
                                       </td>
                                     </tr>
                                   </tbody>
@@ -453,34 +448,20 @@
             <!--// TWO SECTION -->
             <!--THREE SECTIONS -->
             <tr>
-              <td style="padding-bottom:20px;" align="center" valign="top">
-                <!-- CENTERING TABLE // -->
-                <table border="0" cellpadding="0" cellspacing="0" width="100%">
+              <td valign="top" align="center">
+                <table width="100%" cellspacing="0" cellpadding="0" border="0">
                   <tbody>
                     <tr>
-                      <td align="center" valign="top">
-                        <!-- FLEXIBLE CONTAINER // -->
-                        <table border="0" cellpadding="0" cellspacing="0" width="600" class="flexibleContainer" style="background:#5b7e91;">
+                      <td valign="top" align="center">
+                        <table class="flexibleContainer" width="600" cellspacing="0" cellpadding="0" border="0">
                           <tbody>
                             <tr>
-                              <td valign="top" width="600" class="flexibleContainerCell2 bottomShim">
-                                <table align="Right" border="0" cellpadding="0" cellspacing="0" width="200" class="emailButton">
+                              <td width="600" valign="top" align="center">
+                                <table width="100%" cellspacing="0" cellpadding="0" border="0">
                                   <tbody>
                                     <tr>
-                                      <td align="center" valign="middle" class="buttonContent">
-                                        <a href="#" target="_blank"><img src="https://gallery.mailchimp.com/ba59bc3dd143340a6fa8f833e/images/d2a5b13c-d06e-46e6-84cd-ce24c4795525.png" width="100%" class="flexibleImage" style="max-width:30px;"></a>
-                                      </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-
-                                <table align="Left" border="0" cellpadding="0" cellspacing="0" width="340" class="flexibleContainer">
-                                  <tbody>
-                                    <tr>
-                                      <td style="padding-bottom: 0;" valign="top" class="textContent">
-                                        <p style="color:#fff;"><strong>Para continuar haz clic en el <br> siguiente link</strong><br>
-                                          <a style="color:#bfd72b;" href="#">http://www.360gradosenconcreto.com/ID?juan&carlos&restrepo/miCuenta</a>
-                                        </p>
+                                      <td class="imageContentLast" style="padding-bottom:5px" valign="top">
+                                        <a href="#"><img src="img/email.png" class="flexibleImage" style="max-width:600px;" width="100%"></a>
                                       </td>
                                     </tr>
                                   </tbody>
@@ -556,7 +537,7 @@
                             <tr>
                               <td valign="top" class="textContent" style="COLOR: #01296c; text-align: center; padding: 5px 60px; font-size: 11px;">
                                 <br>Cementos Argos S.A. respeta su privacidad y sus datos personales. De conformidad con la ley estatutaria 1581 de 2012, por la cual se dictan disposiciones generales para la protecci&oacute;n de datos personales, se le
-                                informa que usted puede desarrollar el derecho constitucional a conocer, actualizar, rectificar y suprimir su informaci&oacute;n personal, para lo que podria contactarnos en el correo<a href="#">datospersonalesargos.com.co</a>                                y/o a nuestra linea de atenci&oacute;n al clientes (018000527467)
+                                informa que usted puede desarrollar el derecho constitucional a conocer, actualizar, rectificar y suprimir su informaci&oacute;n personal, para lo que podria contactarnos en el correo <a href="#">datospersonalesargos.com.co</a>                                y/o a nuestra linea de atenci&oacute;n al clientes (018000527467)
                                 <br><br>
                                 <a href="#">Haz clic aqu&iacute;</a> si no deseas seguir recibiendo este contenido
                               </td>
