--- a/mail2/mail.html
+++ b/mail2/mail.html
@@ -363,7 +363,7 @@
                                     </tr>
                                     <tr>
                                       <td valign="top" height="57px" bgcolor="#db692b">
-                                        <h2 style="color:#fff;padding: 10px 0;">JUAN CAMILO SUAREZ</h2>
+                                        <h2 style="color:#fff;margin: 10px 0;">JUAN CAMILO SUAREZ</h2>
                                       </td>
                                     </tr>
                                     <tr>
@@ -378,7 +378,7 @@
                                     </tr>
                                     <tr>
                                       <td valign="top">
-                                        <img src="img/3.png" width="443px" style="max-width:600px;display:block;" />
+                                        <img src="img/mailsbottom2.png" width="443px" style="max-width:600px;display:block;" />
                                       </td>
                                     </tr>
                                   </tbody>
