--- a/mail1/mail.html
+++ b/mail1/mail.html
@@ -351,21 +351,27 @@
                             <table border="0" cellpadding="0" cellspacing="0" width="100%">
                               <tr>
                                 <td valign="top">
-                                  <img src="img/col1.png" width="133px" style="max-width:600px;display:block;" />
+                                  <img src="img/colum_01.png" width="131px" style="max-width:600px;display:block;" />
                                 </td>
-                                <td width="343" valign="top" align="center">
+                                <td width="345" valign="top" align="center">
                                 <table width="100%" cellspacing="0" cellpadding="0" border="0">
                                   <tbody>
                                     <tr>
                                       <td valign="top">
-                                        <img src="img/mails1_03.png" width="443px" style="max-width:600px;display:block;" />
+                                        <img src="img/colum_02.png" width="443px" style="max-width:600px;display:block;" />
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td valign="top" height="55px" bgcolor="#db692b">
-                                        <h2 style="color:#fff;padding: 10px 0;">JUAN CAMILO SUAREZ</h2>
+                                      <td valign="top"  width="100%">
+                                      &nbsp;
+                                     </td>
+                                    </tr>
+                                    <tr>
+                                      <td valign="top">
+                                        <h2 style="color: #db692b; font-size: 28px; ">JUAN CAMILO SUAR&Eacute;Z</h2>
                                       </td>
                                     </tr>
+
                                     <tr>
                                       <td valign="top">
                                         <img src="img/mails1_08.png" width="443px" style="max-width:600px;display:block;" />
@@ -378,13 +384,13 @@
                                     </tr>
                                     <tr>
                                       <td valign="top">
-                                        <img src="img/imgbootom.png" width="443px" style="max-width:600px;display:block;" />
+                                        <img src="img/mailbottom.png" width="443px" style="max-width:600px;display:block;" />
                                       </td>
                                     </tr>
                                   </tbody>
                                 </table>
                                 <td valign="top">
-                                  <img src="img/col2.png" width="124px" style="max-width:600px;display:block;" />
+                                  <img src="img/colum_03.png" width="126px" style="max-width:600px;display:block;" />
                                 </td>
                               </tr>
                             </table>
