--- a/qiip/mail5/mail.html
+++ b/qiip/mail5/mail.html
@@ -331,7 +331,7 @@
             <!-- //PRE HEADER -->
             <!--HEADER -->
             <tr>
-              <td valign="top" align="center" bgcolor="#a000e8">
+              <td valign="top" align="center" bgcolor="#9223e0">
                 <!-- CENTERING TABLE // -->
                 <table width="100%" cellspacing="0" cellpadding="0" border="0">
                   <tbody>
@@ -349,7 +349,7 @@
                                   <tbody>
                                     <tr>
                                       <td class="imageContent" valign="top" align="Left">
-                                        <img src="img/logoqiipcorreo.png" width="200px" style="max-width:200px;display:block;" />
+                                        <img src="img/logoqiip.png" width="158px" style="max-width:200px;display:block;" />
                                       </td>
                                     </tr>
                                   </tbody>
@@ -361,8 +361,8 @@
                                 <table class="flexibleContainer" width="340" cellspacing="0" cellpadding="0" border="0" align="Right">
                                   <tbody>
                                     <tr>
-                                      <td class="textContent" valign="top" style="color:#fff;padding-top:20px;">
-                                        <strong>Hola,</strong> Carolina Gonzáles
+                                      <td class="textContent" valign="top" style="color:#fff;padding-top:20px;text-align:right;">
+                                        &nbsp;
                                       </td>
                                     </tr>
                                   </tbody>
@@ -400,15 +400,13 @@
                                 <table width="100%" cellspacing="0" cellpadding="0" border="0">
                                   <tbody>
                                     <tr>
-                                      <td class="imageContent" valign="top">
-                                        <img style="display:block;" src="img/banner.jpg" class="flexibleImage" style="max-width:600px;" width="100%">
+                                      <td class="imageContent" valign="top" style="padding:0;">
+                                        <img style="display:block;" src="img/banner.jpg" class="flexibleImage" style="max-width:600px;display:block;" width="100%">
                                       </td>
                                     </tr>
                                   </tbody>
                                 </table>
                                 <!-- // CONTENT TABLE -->
-
-
                               </td>
                             </tr>
                           </tbody>
@@ -424,115 +422,7 @@
             <!--//BANNER -->
             <!--SECCION 1 -->
             <tr>
-              <td valign="top" align="center">
-                <!-- CENTERING TABLE // -->
-                <table width="100%" cellspacing="0" cellpadding="0" border="0">
-                  <tbody>
-                    <tr>
-                      <td valign="top" align="center">
-                        <!-- FLEXIBLE CONTAINER // -->
-                        <table class="flexibleContainer" width="600" cellspacing="0" cellpadding="0" border="0">
-                          <tbody>
-                            <tr>
-                              <td class="flexibleContainerCell" width="600" valign="top">
-
-
-                                <!-- CONTENT TABLE // -->
-                                <table class="flexibleContainer" width="200" cellspacing="0" cellpadding="0" border="0" align="Left">
-                                  <tbody>
-                                    <tr>
-                                      <td class="imageContent" valign="top" align="Left">
-                                        <img src="img/icon1.png" class="flexibleImage" style="max-width:150px; display:block;margin:auto;" width="150px">
-                                      </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                                <!-- // CONTENT TABLE -->
-
-
-                                <!-- CONTENT TABLE // -->
-                                <table class="flexibleContainer" width="340" cellspacing="0" cellpadding="0" border="0" align="Right">
-                                  <tbody>
-                                    <tr>
-                                      <td class="textContent" valign="top">
-                                        Quisi&eacute;ramos saber cu&aacute;les son las dudas que tienes sobre nuestros servicio. Si deseas informaci&oacute;n adicional sobre la esencia y propuesta de valor que tenemos para ti y tus empleados, ingresa a nuestra p&aacute;gina web:
-                                        <a style="color:#00eadd;  font-weight:bold;" target="_blank" href="https://www.qiip.com.mx">https://www.qiip.com.mx</a> y rellena nuestra <a style=" font-weight:bold;" href="#">encuesta</a> o comunicate con nuestro
-                                        equipo de Soporte qiip <span style="color:#a000e8; font-weight:bold;">+52 558 526 8204</span> donde estaremos atentos para ayudarte
-                                      </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                                <!-- // CONTENT TABLE -->
-
-
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                        <!-- // FLEXIBLE CONTAINER -->
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-                <!-- // CENTERING TABLE -->
-              </td>
-            </tr>
-            <!--//SECCION 1 -->
-            <!--BTNS -->
-            <tr>
-              <td valign="top" align="center">
-                <!-- CENTERING TABLE // -->
-                <table width="100%" cellspacing="0" cellpadding="0" border="0">
-                  <tbody>
-                    <tr>
-                      <td valign="top" align="center">
-                        <!-- FLEXIBLE CONTAINER // -->
-                        <table class="flexibleContainer" width="600" cellspacing="0" cellpadding="0" border="0">
-                          <tbody>
-                            <tr>
-                              <td class="flexibleContainerCell" width="600" valign="top" align="center">
-
-
-                                <!-- CONTENT TABLE // -->
-                                <table class="flexibleContainer" width="260" cellspacing="0" cellpadding="0" border="0" align="Left">
-                                  <tbody>
-                                    <tr>
-                                      <td class="imageContent" valign="top" align="Left">
-                                        <a href="#"><img src="img/btn1.png" class="flexibleImage" style="max-width:250px;display:block;margin:auto;" width="250"></a>
-                                      </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                                <!-- // CONTENT TABLE -->
-
-
-                                <!-- CONTENT TABLE // -->
-                                <table class="flexibleContainer" width="260" cellspacing="0" cellpadding="0" border="0" align="Right">
-                                  <tbody>
-                                    <tr>
-                                      <td class="imageContentLast" valign="top" align="Left">
-                                        <a href="#"><img src="img/btn2.png" class="flexibleImage" style="max-width:250px;display:block;margin:auto;" width="250"></a>
-                                      </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                                <!-- // CONTENT TABLE -->
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                        <!-- // FLEXIBLE CONTAINER -->
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-                <!-- // CENTERING TABLE -->
-              </td>
-            </tr>
-            <!--//BTNS -->
-            <!--LINE -->
-            <tr>
-              <td valign="top" align="center">
+              <td valign="top" align="center" >
                 <!-- CENTERING TABLE // -->
                 <table width="100%" cellspacing="0" cellpadding="0" border="0">
                   <tbody>
@@ -547,8 +437,8 @@
                                 <table width="100%" cellspacing="0" cellpadding="0" border="0">
                                   <tbody>
                                     <tr>
-                                      <td class="imageContent" valign="top">
-                                        <img src="img/linea.png" class="flexibleImage" style="max-width:1px;display:block;margin:auto;" width="1px">
+                                      <td class="imageContent" valign="top" style="padding:0;">
+                                        <img style="display:block;" src="img/banner2.jpg" class="flexibleImage" style="max-width:600px;display:block;" width="100%">
                                       </td>
                                     </tr>
                                   </tbody>
@@ -566,7 +456,60 @@
                 <!-- // CENTERING TABLE -->
               </td>
             </tr>
-            <!--//LINE -->
+            <!--//SECCION 1 -->
+            <!--SECCION 2 -->
+            <!--//SECCION 2 -->
+            <!--SECCION 3 -->
+            <tr>
+              <td valign="top" align="center" bgcolor="#01e4d9">
+                <!-- CENTERING TABLE // -->
+                <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                  <tbody>
+                    <tr>
+                      <td valign="top" align="center">
+                        <!-- FLEXIBLE CONTAINER // -->
+                        <table class="flexibleContainer" width="600" cellspacing="0" cellpadding="0" border="0">
+                          <tbody>
+                            <tr>
+                              <td class="flexibleContainerCell" width="600" valign="top" align="center">
+
+
+                                <!-- CONTENT TABLE // -->
+                                <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                                  <tbody>
+                                    <tr>
+                                      <td class="textContent" valign="top" style="text-align:center;font-weight:bold;font-size:14px; color:#000;">
+                                        En qiip tus empleados pueden guardar<br />parte de su salario directamente desde <br />n&oacute;mina y convertir el ahorro en un <br />h&aacute;bito para alcanzar grandes metas.
+                                        <hr style="border-style: solid; border-color: #ab1ee6; width: 50%; margin-top: 24px;">
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td class="imageContentLast" valign="top">
+                                        <a href="#"><img src="img/btncta.png" class="flexibleImage" style="max-width:270px;display:block;margin:auto;" width="270"></a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td valign="top" class="preheaderContent" style="padding:20px;">
+                                        &nbsp;
+                                      </td>
+                                    </tr>
+                                  </tbody>
+                                </table>
+                                <!-- // CONTENT TABLE -->
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                        <!-- // FLEXIBLE CONTAINER -->
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+                <!-- // CENTERING TABLE -->
+              </td>
+            </tr>
+            <!--//SECCION 3 -->
+
             <!--FOOTER -->
             <tr>
               <td valign="top" align="center">
@@ -587,9 +530,12 @@
                                       <td class="textContent" valign="top">
                                         <p style="color: #989898;text-align: center;font-weight: bold;font-family: helvetica;font-size: 16px;padding-bottom: 0px;margin-bottom: 0px;">Todos los derechos reservados &copy; SURA</p>
                                         <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 16px;padding-bottom: 0px;margin-bottom: 0px;">Estas recibiendo este email porque estás suscrito a nuestro newsletter.</p>
-                                        <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 12px;"><a style="color:#a000e8;" href="#">Desuscribirme</a> de esta lista</p>
-                                        <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 11px;padding-bottom: 0px;">La información contenida en este correo electrónico es confidencial y está protegida legalmente. Está dirigido solamente a la dirección de correo señalada y el acceso a cualquier otra persona, no está autorizado. Si no es el receptor de este correo electrónico, cualquier difusión, copia o distribución está prohibida y puede ser ilegal. Si lo ha recibido por error, por favor notifique al emisor, bórrelo de forma permanente y destruya cualquier copia impresa.</p>
-                                        <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 11px;">En caso de que el correo esté dirigido a alguno de nuestros clientes, la opinión o recomendación contenida está sujeta a las condiciones regulatorias de qiip y/o SURA que resulten aplicables o a los acuerdos comerciales suscritos con el cliente.</p>
+                                        <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 12px;"><a style="color:#9223e0;" href="#">Desuscribirme</a> de esta lista</p>
+                                        <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 11px;padding-bottom: 0px;">La información contenida en este correo electrónico es confidencial y está protegida legalmente. Está dirigido solamente a la dirección de correo señalada y el acceso a cualquier otra persona, no está autorizado.
+                                          Si no es el receptor de este correo electrónico, cualquier difusión, copia o distribución está prohibida y puede ser ilegal. Si lo ha recibido por error, por favor notifique al emisor, bórrelo de forma permanente
+                                          y destruya cualquier copia impresa.</p>
+                                        <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 11px;">En caso de que el correo esté dirigido a alguno de nuestros clientes, la opinión o recomendación contenida está sujeta a las condiciones regulatorias de qiip y/o SURA que resulten aplicables o a los acuerdos comerciales
+                                          suscritos con el cliente.</p>
                                       </td>
                                     </tr>
                                   </tbody>
