--- a/qiip/mail6/mail.html
+++ b/qiip/mail6/mail.html
@@ -105,6 +105,11 @@
       padding-Right: 20px;
       padding-Left: 20px;
     }
+    .flexibleContainerCell2 {
+      padding-top: 0;
+      padding-Right: 0;
+      padding-Left: 0;
+    }
 
     .flexibleImage {
       height: auto;
@@ -200,33 +205,6 @@
       text-decoration: none;
     }
 
-    .emailCalendar {
-      background-color: #FFFFFF;
-      border: 1px solid #CCCCCC;
-    }
-
-    .emailCalendarMonth {
-      background-color: #2C9AB7;
-      color: #FFFFFF;
-      font-family: Helvetica, Arial, sans-serif;
-      font-size: 16px;
-      font-weight: bold;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      text-align: center;
-    }
-
-    .emailCalendarDay {
-      color: #2C9AB7;
-      font-family: Helvetica, Arial, sans-serif;
-      font-size: 60px;
-      font-weight: bold;
-      line-height: 100%;
-      padding-top: 20px;
-      padding-bottom: 20px;
-      text-align: center;
-    }
-
     /*////// MOBILE STYLES //////*/
 
     @media only screen and (max-width: 480px) {
@@ -313,7 +291,7 @@
                             <table align="Right" border="0" cellpadding="0" cellspacing="0" width="260" class="flexibleContainer">
                               <tr>
                                 <td valign="top" class="textContentLast" style="font-size:14px;">
-                                  ¿No te muestra el contenido?<a style="color: #53208b;font-weight: bold;" href="#" target="_blank">Clic aqui</a>.
+                                  ¿No te muestra el contenido?<a style="color: #53208b !important;font-weight: bold;" href="#" target="_blank">Clic aqui</a>.
                                 </td>
                               </tr>
                             </table>
@@ -331,7 +309,7 @@
             <!-- //PRE HEADER -->
             <!--HEADER -->
             <tr>
-              <td valign="top" align="center" bgcolor="#a000e8">
+              <td valign="top" align="center" bgcolor="#9223e0">
                 <!-- CENTERING TABLE // -->
                 <table width="100%" cellspacing="0" cellpadding="0" border="0">
                   <tbody>
@@ -341,15 +319,15 @@
                         <table class="flexibleContainer" width="600" cellspacing="0" cellpadding="0" border="0">
                           <tbody>
                             <tr>
-                              <td class="flexibleContainerCell" width="600" valign="top">
+                              <td class="flexibleContainerCell" width="600" valign="top" style="padding-top:10px;">
 
 
                                 <!-- CONTENT TABLE // -->
-                                <table class="flexibleContainer" width="200" cellspacing="0" cellpadding="0" border="0" align="Left">
+                                <table class="flexibleContainer" width="200" cellspacing="0" cellpadding="0" border="0" align="right">
                                   <tbody>
                                     <tr>
-                                      <td class="imageContent" valign="top" align="Left">
-                                        <img src="img/logoqiipcorreo.png" width="200px" style="max-width:200px;display:block;" />
+                                      <td class="imageContent" valign="top" align="Left" style="padding-bottom:10px;">
+                                        <img src="img/logoqiip.png" width="130px" style="max-width:200px;display:block;margin:auto;" />
                                       </td>
                                     </tr>
                                   </tbody>
@@ -358,11 +336,11 @@
 
 
                                 <!-- CONTENT TABLE // -->
-                                <table class="flexibleContainer" width="340" cellspacing="0" cellpadding="0" border="0" align="Right">
+                                <table class="flexibleContainer" width="340" cellspacing="0" cellpadding="0" border="0" align="Left">
                                   <tbody>
                                     <tr>
-                                      <td class="textContent" valign="top" style="color:#fff;padding-top:20px;">
-                                        <strong>Hola,</strong> Carolina Gonzáles
+                                      <td class="textContent" valign="top" style="color:#fff;padding-top:20px;text-align:right;">
+                                        &nbsp;
                                       </td>
                                     </tr>
                                   </tbody>
@@ -400,15 +378,13 @@
                                 <table width="100%" cellspacing="0" cellpadding="0" border="0">
                                   <tbody>
                                     <tr>
-                                      <td class="imageContent" valign="top">
-                                        <img style="display:block;" src="img/banner.jpg" class="flexibleImage" style="max-width:600px;" width="100%">
+                                      <td class="imageContent " valign="top" style="padding:0;">
+                                        <img style="display:block;" src="img/banner.png" class="flexibleImage" style="max-width:600px;display:block;" width="100%">
                                       </td>
                                     </tr>
                                   </tbody>
                                 </table>
                                 <!-- // CONTENT TABLE -->
-
-
                               </td>
                             </tr>
                           </tbody>
@@ -434,7 +410,7 @@
                         <table class="flexibleContainer" width="600" cellspacing="0" cellpadding="0" border="0">
                           <tbody>
                             <tr>
-                              <td class="flexibleContainerCell" width="600" valign="top">
+                              <td class="flexibleContainerCell containercellresponsive" width="600" valign="top" style="padding-left:0;">
 
 
                                 <!-- CONTENT TABLE // -->
@@ -442,7 +418,8 @@
                                   <tbody>
                                     <tr>
                                       <td class="imageContent" valign="top" align="Left">
-                                        <img src="img/icon1.png" class="flexibleImage" style="max-width:150px; display:block;margin:auto;" width="150px">
+                                        <img src="img/pict.png" class="flexibleImage imggrande" style="max-width:200px;" width="200">
+                                        <img src="img/pict2.png" class="flexibleImage imgresponsive" style="max-width:162px;margin:auto;" width="162;">
                                       </td>
                                     </tr>
                                   </tbody>
@@ -454,10 +431,33 @@
                                 <table class="flexibleContainer" width="340" cellspacing="0" cellpadding="0" border="0" align="Right">
                                   <tbody>
                                     <tr>
-                                      <td class="textContent" valign="top">
-                                        Quisi&eacute;ramos saber cu&aacute;les son las dudas que tienes sobre nuestros servicio. Si deseas informaci&oacute;n adicional sobre la esencia y propuesta de valor que tenemos para ti y tus empleados, ingresa a nuestra p&aacute;gina web:
-                                        <a style="color:#00eadd;  font-weight:bold;" target="_blank" href="https://www.qiip.com.mx">https://www.qiip.com.mx</a> y rellena nuestra <a style=" font-weight:bold;" href="#">encuesta</a> o comunicate con nuestro
-                                        equipo de Soporte qiip <span style="color:#a000e8; font-weight:bold;">+52 558 526 8204</span> donde estaremos atentos para ayudarte
+                                      <td class="textContent textresponsive" style="padding-top:30px; width:100%;" valign="top">
+                                        &nbsp;
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td class="textContent textresponsive" valign="top">
+                                        <p style="line-height: 100%;font-size: 40px; font-weight: bold; margin:0;color:#9223e0;padding:0;">¡qiip es <br> oficialmente <br>parte de nuestra<br>empresa!</p>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td class="textContent textresponsive" style="padding-bottom:0;" valign="top">
+                                        <p><strong>Descarga la App</strong> y pronto recibirás un SMS <br>para empezar a usarlo.</p>
+                                        <p>No te lo pierdas, está padrisimo!</p>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td class="imageContent" valign="top">
+                                        <table class="flexibleContainer" width="100%" cellspacing="0" cellpadding="0" border="0" align="Right">
+                                          <tbody>
+                                            <tr>
+                                              <td class="imageContentLast" valign="top" align="Left">
+                                                  <a href="#"><img src="img/btncta.png" class="flexibleImage imgresponsive" style="max-width:170px;margin:auto;" width="170"></a>
+                                                  <a href="#"><img src="img/btncta.png" class="flexibleImage imggrande" style="max-width:170px;margin:auto;" width="170"></a>
+                                              </td>
+                                            </tr>
+                                          </tbody>
+                                        </table>
                                       </td>
                                     </tr>
                                   </tbody>
@@ -478,95 +478,7 @@
               </td>
             </tr>
             <!--//SECCION 1 -->
-            <!--BTNS -->
-            <tr>
-              <td valign="top" align="center">
-                <!-- CENTERING TABLE // -->
-                <table width="100%" cellspacing="0" cellpadding="0" border="0">
-                  <tbody>
-                    <tr>
-                      <td valign="top" align="center">
-                        <!-- FLEXIBLE CONTAINER // -->
-                        <table class="flexibleContainer" width="600" cellspacing="0" cellpadding="0" border="0">
-                          <tbody>
-                            <tr>
-                              <td class="flexibleContainerCell" width="600" valign="top" align="center">
 
-
-                                <!-- CONTENT TABLE // -->
-                                <table class="flexibleContainer" width="260" cellspacing="0" cellpadding="0" border="0" align="Left">
-                                  <tbody>
-                                    <tr>
-                                      <td class="imageContent" valign="top" align="Left">
-                                        <a href="#"><img src="img/btn1.png" class="flexibleImage" style="max-width:250px;display:block;margin:auto;" width="250"></a>
-                                      </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                                <!-- // CONTENT TABLE -->
-
-
-                                <!-- CONTENT TABLE // -->
-                                <table class="flexibleContainer" width="260" cellspacing="0" cellpadding="0" border="0" align="Right">
-                                  <tbody>
-                                    <tr>
-                                      <td class="imageContentLast" valign="top" align="Left">
-                                        <a href="#"><img src="img/btn2.png" class="flexibleImage" style="max-width:250px;display:block;margin:auto;" width="250"></a>
-                                      </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                                <!-- // CONTENT TABLE -->
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                        <!-- // FLEXIBLE CONTAINER -->
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-                <!-- // CENTERING TABLE -->
-              </td>
-            </tr>
-            <!--//BTNS -->
-            <!--LINE -->
-            <tr>
-              <td valign="top" align="center">
-                <!-- CENTERING TABLE // -->
-                <table width="100%" cellspacing="0" cellpadding="0" border="0">
-                  <tbody>
-                    <tr>
-                      <td valign="top" align="center">
-                        <!-- FLEXIBLE CONTAINER // -->
-                        <table class="flexibleContainer" width="600" cellspacing="0" cellpadding="0" border="0">
-                          <tbody>
-                            <tr>
-                              <td class="flexibleContainerCell" width="600" valign="top" align="center" style="padding:0;">
-                                <!-- CONTENT TABLE // -->
-                                <table width="100%" cellspacing="0" cellpadding="0" border="0">
-                                  <tbody>
-                                    <tr>
-                                      <td class="imageContent" valign="top">
-                                        <img src="img/linea.png" class="flexibleImage" style="max-width:1px;display:block;margin:auto;" width="1px">
-                                      </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                                <!-- // CONTENT TABLE -->
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                        <!-- // FLEXIBLE CONTAINER -->
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-                <!-- // CENTERING TABLE -->
-              </td>
-            </tr>
-            <!--//LINE -->
             <!--FOOTER -->
             <tr>
               <td valign="top" align="center">
@@ -579,17 +491,16 @@
                         <table class="flexibleContainer" width="600" cellspacing="0" cellpadding="0" border="0">
                           <tbody>
                             <tr>
-                              <td class="flexibleContainerCell" width="600" valign="top" align="center">
+                              <td class="flexibleContainerCell" width="600" valign="top" align="center" style="padding-top:0;">
                                 <!-- CONTENT TABLE // -->
                                 <table width="100%" cellspacing="0" cellpadding="0" border="0">
                                   <tbody>
                                     <tr>
                                       <td class="textContent" valign="top">
                                         <p style="color: #989898;text-align: center;font-weight: bold;font-family: helvetica;font-size: 16px;padding-bottom: 0px;margin-bottom: 0px;">Todos los derechos reservados &copy; SURA</p>
-                                        <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 16px;padding-bottom: 0px;margin-bottom: 0px;">Estas recibiendo este email porque estás suscrito a nuestro newsletter.</p>
-                                        <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 12px;"><a style="color:#a000e8;" href="#">Desuscribirme</a> de esta lista</p>
-                                        <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 11px;padding-bottom: 0px;">La información contenida en este correo electrónico es confidencial y está protegida legalmente. Está dirigido solamente a la dirección de correo señalada y el acceso a cualquier otra persona, no está autorizado. Si no es el receptor de este correo electrónico, cualquier difusión, copia o distribución está prohibida y puede ser ilegal. Si lo ha recibido por error, por favor notifique al emisor, bórrelo de forma permanente y destruya cualquier copia impresa.</p>
-                                        <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 11px;">En caso de que el correo esté dirigido a alguno de nuestros clientes, la opinión o recomendación contenida está sujeta a las condiciones regulatorias de qiip y/o SURA que resulten aplicables o a los acuerdos comerciales suscritos con el cliente.</p>
+                                        <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 16px;padding-bottom: 0px;margin-bottom: 0px;margin-top:0;">Estas recibiendo este email porque estás suscrito a nuestro newsletter.</p>
+                                        <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 12px;margin-top:0;"><a style="color:#ab1fe6;" href="#">Desuscribirme</a> de esta lista</p>
+
                                       </td>
                                     </tr>
                                   </tbody>
