--- a/qiip/mailwebinar/index.html
+++ b/qiip/mailwebinar/index.html
@@ -106,6 +106,12 @@
       padding-Left: 20px;
     }
 
+    .flexibleContainerCell2 {
+      padding-top: 0px;
+      padding-Right: 0px;
+      padding-Left: 0px;
+    }
+
     .flexibleImage {
       height: auto;
     }
@@ -349,7 +355,7 @@
                                   <tbody>
                                     <tr>
                                       <td class="imageContent" valign="top" align="Left">
-                                        <img src="img/logoqiipcorreo.png" width="200px" style="max-width:200px;display:block;" />
+                                        <img src="img/logoqiip.png" width="200px" style="max-width:200px;display:block;" />
                                       </td>
                                     </tr>
                                   </tbody>
@@ -361,8 +367,8 @@
                                 <table class="flexibleContainer" width="340" cellspacing="0" cellpadding="0" border="0" align="Right">
                                   <tbody>
                                     <tr>
-                                      <td class="textContent" valign="top" style="color:#fff;padding-top:20px;">
-                                        <strong>Hola,</strong> Carolina Gonzáles
+                                      <td class="textContent" valign="top">
+                                        &nbsp;
                                       </td>
                                     </tr>
                                   </tbody>
@@ -400,10 +406,49 @@
                                 <table width="100%" cellspacing="0" cellpadding="0" border="0">
                                   <tbody>
                                     <tr>
-                                      <td class="imageContent" valign="top">
-                                        <img style="display:block;" src="img/banner.jpg" class="flexibleImage" style="max-width:600px;" width="100%">
+                                      <td class="imageContent" valign="top" style="padding:0;">
+                                        <img style="display:block;" src="img/banner.png" class="flexibleImage" style="max-width:600px;display:block;" width="100%">
                                       </td>
                                     </tr>
+                                  </tbody>
+                                </table>
+                                <!-- // CONTENT TABLE -->
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                        <!-- // FLEXIBLE CONTAINER -->
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+                <!-- // CENTERING TABLE -->
+              </td>
+            </tr>
+            <!--//BANNER -->
+            <!--SECCION -->
+            <tr>
+              <td valign="top" align="center" bgcolor="#9304e5">
+                <!-- CENTERING TABLE // -->
+                <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                  <tbody>
+                    <tr>
+                      <td valign="top" align="center">
+                        <!-- FLEXIBLE CONTAINER // -->
+                        <table class="flexibleContainer" width="600" cellspacing="0" cellpadding="0" border="0">
+                          <tbody>
+                            <tr>
+                              <td class="flexibleContainerCell" width="600" valign="top" align="center">
+                                <!-- CONTENT TABLE // -->
+                                <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                                  <tbody>
+                                    <tr>
+                                      <td class="textContent" valign="top" style="text-align:center; color:#fff;">
+                                        <h3 style="text-align:center;color:#fff;margin-bottom:10px;">Pensando en tu proceso,te invitamos al webinar:</h3>
+                                        ¿C&oacute;mo mejorar sus finanzas personales con qiip?
+                                      </td>
+                                    </tr>
+
                                   </tbody>
                                 </table>
                                 <!-- // CONTENT TABLE -->
@@ -421,10 +466,10 @@
                 <!-- // CENTERING TABLE -->
               </td>
             </tr>
-            <!--//BANNER -->
+            <!--//SECCION -->
             <!--SECCION 1 -->
             <tr>
-              <td valign="top" align="center">
+              <td valign="top" align="center" bgcolor="#9304e5">
                 <!-- CENTERING TABLE // -->
                 <table width="100%" cellspacing="0" cellpadding="0" border="0">
                   <tbody>
@@ -434,30 +479,26 @@
                         <table class="flexibleContainer" width="600" cellspacing="0" cellpadding="0" border="0">
                           <tbody>
                             <tr>
-                              <td class="flexibleContainerCell" width="600" valign="top">
-
-
+                              <td class="flexibleContainerCell" width="600" valign="top" style="padding:10px;">
                                 <!-- CONTENT TABLE // -->
                                 <table class="flexibleContainer" width="200" cellspacing="0" cellpadding="0" border="0" align="Left">
                                   <tbody>
                                     <tr>
-                                      <td class="imageContent" valign="top" align="Left">
-                                        <img src="img/icon1.png" class="flexibleImage" style="max-width:150px; display:block;margin:auto;" width="150px">
+                                      <td class="imageContent" valign="top" align="right" style="padding:0;">
+                                        <img src="img/icon.png" class="flexibleImage" style="max-width:60px; display:block;margin:auto;" width="60px">
                                       </td>
                                     </tr>
                                   </tbody>
                                 </table>
                                 <!-- // CONTENT TABLE -->
-
-
                                 <!-- CONTENT TABLE // -->
                                 <table class="flexibleContainer" width="340" cellspacing="0" cellpadding="0" border="0" align="Right">
                                   <tbody>
                                     <tr>
-                                      <td class="textContent" valign="top">
-                                        Quisi&eacute;ramos saber cu&aacute;les son las dudas que tienes sobre nuestros servicio. Si deseas informaci&oacute;n adicional sobre la esencia y propuesta de valor que tenemos para ti y tus empleados, ingresa a nuestra p&aacute;gina web:
-                                        <a style="color:#00eadd;  font-weight:bold;" target="_blank" href="https://www.qiip.com.mx">https://www.qiip.com.mx</a> y rellena nuestra <a style=" font-weight:bold;" href="#">encuesta</a> o comunicate con nuestro
-                                        equipo de Soporte qiip <span style="color:#a000e8; font-weight:bold;">+52 558 526 8204</span> donde estaremos atentos para ayudarte
+                                      <td class="textContent" valign="top" style="color:#fff; padding:10px;">
+                                        <span style="color:#00e6dc; font-weight:bold;">Fecha:</span>Viernes,23 de marzo de 2018<br />
+                                        <span style="color:#00e6dc; font-weight:bold;">Hora:</span>De 12:30 a 13:15 h.<br />
+
                                       </td>
                                     </tr>
                                   </tbody>
@@ -478,59 +519,7 @@
               </td>
             </tr>
             <!--//SECCION 1 -->
-            <!--BTNS -->
-            <tr>
-              <td valign="top" align="center">
-                <!-- CENTERING TABLE // -->
-                <table width="100%" cellspacing="0" cellpadding="0" border="0">
-                  <tbody>
-                    <tr>
-                      <td valign="top" align="center">
-                        <!-- FLEXIBLE CONTAINER // -->
-                        <table class="flexibleContainer" width="600" cellspacing="0" cellpadding="0" border="0">
-                          <tbody>
-                            <tr>
-                              <td class="flexibleContainerCell" width="600" valign="top" align="center">
-
-
-                                <!-- CONTENT TABLE // -->
-                                <table class="flexibleContainer" width="260" cellspacing="0" cellpadding="0" border="0" align="Left">
-                                  <tbody>
-                                    <tr>
-                                      <td class="imageContent" valign="top" align="Left">
-                                        <a href="#"><img src="img/btn1.png" class="flexibleImage" style="max-width:250px;display:block;margin:auto;" width="250"></a>
-                                      </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                                <!-- // CONTENT TABLE -->
-
-
-                                <!-- CONTENT TABLE // -->
-                                <table class="flexibleContainer" width="260" cellspacing="0" cellpadding="0" border="0" align="Right">
-                                  <tbody>
-                                    <tr>
-                                      <td class="imageContentLast" valign="top" align="Left">
-                                        <a href="#"><img src="img/btn2.png" class="flexibleImage" style="max-width:250px;display:block;margin:auto;" width="250"></a>
-                                      </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                                <!-- // CONTENT TABLE -->
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                        <!-- // FLEXIBLE CONTAINER -->
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-                <!-- // CENTERING TABLE -->
-              </td>
-            </tr>
-            <!--//BTNS -->
-            <!--LINE -->
+            <!--SECCION 2 -->
             <tr>
               <td valign="top" align="center">
                 <!-- CENTERING TABLE // -->
@@ -547,8 +536,69 @@
                                 <table width="100%" cellspacing="0" cellpadding="0" border="0">
                                   <tbody>
                                     <tr>
-                                      <td class="imageContent" valign="top">
-                                        <img src="img/linea.png" class="flexibleImage" style="max-width:1px;display:block;margin:auto;" width="1px">
+                                      <td valign="top" width="15%"></td>
+                                      <td class="textContent" valign="top" width="70%" style="padding-top:40px;">
+                                        <ol style="color: #a000e8; font-size: 16px; font-weight: bold;text-align:Left;">
+                                          <li style="margin-bottom:10px;"><span style="color:#989898;font-size:14px;font-weight:bold;">Beneficio desde la empresa</span></li>
+                                          <li style="margin-bottom:10px;"><span style="color:#989898;font-size:14px;font-weight:bold;">Coaching financiero y emocional</span></li>
+                                          <li style="margin-bottom:10px;"><span style="color:#989898;font-size:14px;font-weight:bold;">Ahorro inteligente</span></li>
+                                          <li style="margin-bottom:10px;"><span style="color:#989898;font-size:14px;font-weight:bold;">qiip como plataforma de servicios a futuro,<br /> con inclusi&oacute;n de beneficios como pr&eacute;stamos.</span></li>
+                                          <li style="margin-bottom:10px;"><span style="color:#989898;font-size:14px;font-weight:bold;">Sesi&oacute;n de preguntas y respuestas.</span></li>
+                                        </ol>
+                                      </td>
+                                      <td valign="top" width="15%"></td>
+
+                                    </tr>
+                                  </tbody>
+                                </table>
+                                <!-- // CONTENT TABLE -->
+
+
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                        <!-- // FLEXIBLE CONTAINER -->
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+                <!-- // CENTERING TABLE -->
+              </td>
+            </tr>
+            <!--//SECCION 2 -->
+            <!--SECCION 3 -->
+            <tr>
+              <td valign="top" align="center">
+                <!-- CENTERING TABLE // -->
+                <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                  <tbody>
+                    <tr>
+                      <td valign="top" align="center">
+                        <!-- FLEXIBLE CONTAINER // -->
+                        <table class="flexibleContainer" width="600" cellspacing="0" cellpadding="0" border="0">
+                          <tbody>
+                            <tr>
+                              <td class="flexibleContainerCell" width="600" valign="top" align="center">
+
+
+                                <!-- CONTENT TABLE // -->
+                                <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                                  <tbody>
+                                    <tr>
+                                      <td class="textContent" valign="top" style="text-align:center;font-weight:bold;font-size:14px;">
+                                        <h2 style="text-align:center;">Para acceder al Webinar</h2>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td class="imageContentLast" valign="top">
+                                        <a href="#"><img src="img/cta.png" class="flexibleImage" style="max-width:560px;display:block;margin:auto;" width="238"></a>
+
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td valign="top">
+                                        <hr style="border-style: solid; border-color: #d3d3d3;">
                                       </td>
                                     </tr>
                                   </tbody>
@@ -566,7 +616,8 @@
                 <!-- // CENTERING TABLE -->
               </td>
             </tr>
-            <!--//LINE -->
+            <!--//SECCION 3 -->
+
             <!--FOOTER -->
             <tr>
               <td valign="top" align="center">
@@ -588,8 +639,11 @@
                                         <p style="color: #989898;text-align: center;font-weight: bold;font-family: helvetica;font-size: 16px;padding-bottom: 0px;margin-bottom: 0px;">Todos los derechos reservados &copy; SURA</p>
                                         <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 16px;padding-bottom: 0px;margin-bottom: 0px;">Estas recibiendo este email porque estás suscrito a nuestro newsletter.</p>
                                         <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 12px;"><a style="color:#a000e8;" href="#">Desuscribirme</a> de esta lista</p>
-                                        <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 11px;padding-bottom: 0px;">La información contenida en este correo electrónico es confidencial y está protegida legalmente. Está dirigido solamente a la dirección de correo señalada y el acceso a cualquier otra persona, no está autorizado. Si no es el receptor de este correo electrónico, cualquier difusión, copia o distribución está prohibida y puede ser ilegal. Si lo ha recibido por error, por favor notifique al emisor, bórrelo de forma permanente y destruya cualquier copia impresa.</p>
-                                        <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 11px;">En caso de que el correo esté dirigido a alguno de nuestros clientes, la opinión o recomendación contenida está sujeta a las condiciones regulatorias de qiip y/o SURA que resulten aplicables o a los acuerdos comerciales suscritos con el cliente.</p>
+                                        <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 11px;padding-bottom: 0px;">La información contenida en este correo electrónico es confidencial y está protegida legalmente. Está dirigido solamente a la dirección de correo señalada y el acceso a cualquier otra persona, no está autorizado.
+                                          Si no es el receptor de este correo electrónico, cualquier difusión, copia o distribución está prohibida y puede ser ilegal. Si lo ha recibido por error, por favor notifique al emisor, bórrelo de forma permanente
+                                          y destruya cualquier copia impresa.</p>
+                                        <p style="color: #989898;text-align: center;font-weight: 300;font-family: helvetica;font-size: 11px;">En caso de que el correo esté dirigido a alguno de nuestros clientes, la opinión o recomendación contenida está sujeta a las condiciones regulatorias de qiip y/o SURA que resulten aplicables o a los acuerdos comerciales
+                                          suscritos con el cliente.</p>
                                       </td>
                                     </tr>
                                   </tbody>
